--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Homeworks</h1>
+    <ul>
+        <li>
+            <a href="1/index.html">homework1</a>
+        </li>
+    </ul>
 </body>
 </html>
