--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <li>
             <a href="1/index.html">homework1</a>
         </li>
+        <li>
+            <a href="2/index.html">homework2</a>
+        </li>
     </ul>
 </body>
 </html>
