--- a/1/index.html
+++ b/1/index.html
@@ -7,7 +7,7 @@
     <h1 style="text-align:center">
         Привіт Світ, це моє резюме!
     </h1>
-    <img src="/assets/images/my_photo.JPG" width="400" alt="my_photo">
+    <img src="assets/images/my_photo.JPG" width="400" alt="my_photo">
         <h2>Про себе</h2>
         <p class="about_myself">
             Мене звуть Микита Кучеров, 22.<br>
@@ -33,6 +33,6 @@
             <li>Посилання на мою мережу:&nbsp;&nbsp;<a href="https://www.instagram.com/kucherovnekit/" target="_blank" rel="nofollow, noreferrer">Instagram</a></li>
         </ul>
     <br>
-    <a href="/en/">EN</a>
+    <a href="en/">EN</a>
 </body>
 </html>
