--- a/1/index.html
+++ b/1/index.html
@@ -33,6 +33,6 @@
             <li>Посилання на мою мережу:&nbsp;&nbsp;<a href="https://www.instagram.com/kucherovnekit/" target="_blank" rel="nofollow, noreferrer">Instagram</a></li>
         </ul>
     <br>
-    <a href="en/">EN</a>
+    <a href="en/index.html">EN</a>
 </body>
 </html>
