--- a/1/en/index.html
+++ b/1/en/index.html
@@ -7,7 +7,7 @@
     <h1 style="text-align:center">
         Hello World, it's my resume!
     </h1>
-    <img src="/assets/images/my_photo.JPG" width="400" alt="my_photo">
+    <img src="/1/assets/images/my_photo.JPG" width="400" alt="my_photo">
         <h2>About me</h2>
         <p class="about_myself">
             My name is Nikita Kucherov, 22.<br>
@@ -33,6 +33,6 @@
             <li>Link to my network:&nbsp;&nbsp;<a href="https://www.instagram.com/kucherovnekit/" target="_blank" rel="nofollow, noreferrer">Instagram</a></li>
         </ul>
     <br>
-    <a href="/index.html">UK</a>
+    <a href="/1/index.html">UK</a>
 </body>
 </html>
