--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="2/index.html">homework2</a>
         </li>
+        <li>
+            <a href="3/index.html">homework3</a>
+        </li>
     </ul>
 </body>
 </html>
