Added early homework4

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href="3/index.html">homework3</a>
         </li>
+        <li>
+            <a href="4/index.html">homework4</a>
+        </li>
     </ul>
 </body>
 </html>
