--- a/3/index.html
+++ b/3/index.html
@@ -36,8 +36,9 @@
             <div class="cointainer">
             <hgroup>
                 <h2>Skills</h2>
-                <div>I work in such programs as</div>
+                <p>I work in such programs as</p>
             </hgroup>
+            <div class="stars">
             <ul>
                 <li>
                     <figure>
@@ -85,6 +86,7 @@
                 </li>
             </ul>
             </div>
+            </div>
         </section>
         <section id="portfolio" class="portfolio">
             <div class="cointainer">
@@ -110,7 +112,7 @@
         <section id="contacts">
             <hgroup>
                 <h2>Contacts</h2>
-                <div>Want to know more or just chat? You are welcome!</div>
+                <p>Want to know more or just chat? You are welcome!</p>
             </hgroup>
             <button>Send message</button>
             <ul>
