--- a/4/index.html
+++ b/4/index.html
@@ -74,7 +74,7 @@
                 Я погоджуюсь з оброкою персональних даних
             </label>
             <br><br>
-            <button type="submit">
+            <button type="reset">
                 Очистити форму
             </button>
             <br><br>
